--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,6 +1,50 @@
 @charset "UTF-8";
 
 :root{
-    --Cor_Verde: hsl(178, 37%, 46%);
+    --Cor_Verde: #4aa19e;
     --Cor_Lilás: #5f2c82;
+}
+
+*{
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+body, html{
+    background: var(--Cor_Lilás);
+    height: 100vh;
+    width: 100vw;
+}
+
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#Login{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.288);
+
+    overflow: hidden;
+    width: 250px;
+    height: 500px;
+    background-color: white;
+    border-radius: 20px;
+}
+
+section#Login > div#Imagem{
+    display: block;
+    background: var(--Cor_Lilás) url(../imagens/anime-beach-hd-wallpaper-by-juh-juh.jpg) center center/cover no-repeat;
+    height: 200px;
+}
+
+section#Login > div#Formulario{
+    display: block;
+    padding: 10px;
 }
