--- a/estilos/Little_devices.css
+++ b/estilos/Little_devices.css
@@ -1,25 +1,3 @@
-@charset "UTF-8";
-
-*{
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
-}
-
-body, html{
-    background-color: rgb(164, 249, 255);
-    height: 100vh;
-    width: 100vw;
-}
-
-main{
-    position: relative;
-    height: 100vh;
-    width: 100vw;
-}
-
-
 section#login{
     padding: 10px;
     position: absolute;
@@ -30,7 +8,7 @@ section#login{
 
     background-color: white;
     border-radius: 20px;
-    width: 50%;
+    width: 60vw;
     height: 700px;
     transform: translate(-50%, -50%);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.315);
@@ -44,5 +22,10 @@ section#login > div#img{
 }
 
 div#form{
+    text-align: center;
     padding: 10px;
+}
+
+div#form > p{
+    padding: 15px;
 }
