--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,7 +8,7 @@
 }
 
 body, html{
-    background-color: rgb(164, 249, 255);
+    background-color: rgb(174, 208, 253);
     height: 100vh;
     width: 100vw;
 }
@@ -17,4 +17,34 @@ main{
     position: relative;
     height: 100vh;
     width: 100vw;
+}
+
+section#login{
+    padding: 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    overflow: hidden;
+
+
+    background-color: white;
+    border-radius: 20px;
+    width: 300px;
+    height: 600px;
+    transform: translate(-50%, -50%);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.315);
+}
+
+section#login > div#img{
+    background: red url(../imagens/beautiful-anime-minimalist-beach.jpg) center bottom/cover no-repeat fixed;
+    height: 200px;
+}
+
+div#form{
+    text-align: center;
+    padding: 10px;
+}
+
+div#form > p{
+    padding: 15px;
 }
