--- a/estilos/hyper-large_device.css
+++ b/estilos/hyper-large_device.css
@@ -1,1 +1,20 @@
 @charset "UTF-8";
+
+@charset "UTF-8";
+
+body{
+    background-image: linear-gradient(180deg,rgb(174, 208, 253), rgb(107, 171, 255) );
+}
+
+section#login{
+    width: 1180px;
+}
+
+section#login > div#img{
+    background: red url(../imagens/beautiful-anime-minimalist-beach.jpg) bottom center/cover no-repeat fixed;
+    height: 100%;
+    float: right;
+    width: 24%;
+    border-radius: 10px;
+    border: 3.5px solid rgb(0, 255, 191);
+}
