--- a/estilos/large_device.css
+++ b/estilos/large_device.css
@@ -1,1 +1,18 @@
 @charset "UTF-8";
+
+body{
+    background-image: linear-gradient(180deg,rgb(174, 208, 253), rgb(107, 171, 255) );
+}
+
+section#login{
+    width: 900px;
+}
+
+section#login > div#img{
+    background: red url(../imagens/beautiful-anime-minimalist-beach.jpg) center bottom/cover no-repeat fixed;
+    height: 100%;
+    float: left;
+    width: 30%;
+    border-radius: 10px;
+    border: 3.5px solid cyan;
+}
