--- a/estilos/medium_devices.css
+++ b/estilos/medium_devices.css
@@ -1,9 +1,20 @@
 @charset "UTF-8";
 
 body{
-    background-image: linear-gradient(180deg,rgb(174, 208, 253), rgb(107, 171, 255) );
+    background-image: linear-gradient(180deg,rgb(174, 208, 253), rgb(126, 182, 255) );
 }
 
 section#login{
-    width: 750px;
+    width: 90%;
+}
+
+div#form > h1{
+    text-align: center;
+    padding: 10px;
+}
+
+div#form > p{
+    padding-top: 10px;
+    font-size: 1em;
+    text-align: left;
 }
