--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,7 +29,7 @@ section#login{
 
     background-color: white;
     border-radius: 20px;
-    width: 300px;
+    width: 90vw;
     height: 600px;
     transform: translate(-50%, -50%);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.315);
@@ -41,10 +41,22 @@ section#login > div#img{
 }
 
 div#form{
+    text-align: left;
+    float: left;
+    width: 100%;
+}
+
+div#form > h1{
     text-align: center;
     padding: 10px;
 }
 
 div#form > p{
-    padding: 15px;
+    padding-top: 10px;
+    font-size: .85em;
+    text-align: left;
+}
+
+#Options_Form{
+    padding-top: 10px;
 }
