--- a/estilos/style.css
+++ b/estilos/style.css
@@ -26,8 +26,7 @@ section#login{
     left: 50%;
     overflow: hidden;
 
-
-    background-color: white;
+    background-color: rgb(234, 255, 185);
     border-radius: 20px;
     width: 90vw;
     height: 600px;
@@ -38,6 +37,7 @@ section#login{
 section#login > div#img{
     background: red url(../imagens/beautiful-anime-minimalist-beach.jpg) center bottom/cover no-repeat fixed;
     height: 200px;
+    border-radius: 10px 10px 0px 0px;
 }
 
 div#form{
@@ -57,6 +57,61 @@ div#form > p{
     text-align: left;
 }
 
-#Options_Form{
-    padding-top: 10px;
+form{
+    margin-top: 10px;
+}
+
+form > div.campo > input[type="email"]{
+    display: block;
+    border-radius: 10px;
+    border: 3px dashed rgb(119, 134, 34);
+}
+
+form > div.campo >  input[type="password"]{
+    display: block;
+    border-radius: 10px;
+    border: 3px dashed rgb(119, 134, 34);
+}
+
+form > div.campo > input[type="email"]:hover{
+    background-color: rgb(240, 240, 240);
+}
+
+form > div.campo >  input[type="password"]:hover{
+    background-color: rgb(240, 240, 240);
+}
+
+form > div#Options_Form > input[type="submit"]{
+    display: block;
+    width: 100%;
+    font-size: 1em;
+    height: 40px;
+    background-color: rgb(0, 184, 0);
+    color: white;
+    margin: 15px 0px;
+    border: 1px solid rgb(0, 53, 7);
+    transition: .3s;
+    cursor: pointer;
+}
+
+form > div#Options_Form > input[type="submit"]:hover{
+    background-color: rgb(0, 129, 11);
+}
+
+
+form > div#Options_Form > input[type="button"]{
+    display: inline-block;
+    width: 25%;
+    height: 30px;
+    border: 1px solid rgb(0, 53, 7);
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+form > div#Options_Form > input[type="button"]:hover{
+    display: block;
+    width: 25%;
+    background-color: rgb(184, 0, 0);
+    color: white;
+    border: 1px solid rgb(0, 53, 7);
 }
